Evaluation - Messung mit Implemntierung von R3 angefange.

--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -16,7 +16,7 @@
   keywords = {network resiliency, routing, routing protection},
 }
 
-@inproceedings{ApCo03,
+@inproceedings{tD2_ApCo03,
  author = {Applegate, David and Cohen, Edith},
  title = {Making intra-domain routing robust to changing and uncertain traffic demands: understanding fundamental tradeoffs},
  booktitle = {Proceedings of the 2003 conference on Applications, technologies, architectures, and protocols for computer communications},
@@ -34,7 +34,7 @@
  keywords = {TM estimation, demand-oblivious routing, routing},
 }
 
-@inproceedings{KYGS05,
+@inproceedings{tD2_KYGS05,
  author = {Kompella, Ramana Rao and Yates, Jennifer and Greenberg, Albert and Snoeren, Alex C.},
  title = {IP fault localization via risk modeling},
  booktitle = {Proceedings of the 2nd conference on Symposium on Networked Systems Design \& Implementation - Volume 2},
@@ -94,7 +94,7 @@
   url="http://www.ietf.org/rfc/rfc2328.txt",
 }
 
-@misc{RFC3031,
+@misc{tD2_RFC3031,
   author="E. Rosen and A. Viswanathan and R. Callon",
   title="{Multiprotocol Label Switching Architecture}",
   series="Request for Comments",
