Evaluierung Simulation angefangen

--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -48,6 +48,53 @@
  address = {Berkeley, CA, USA},
 }
 
+@inproceedings{tD2_MEFV08,
+ author = {Motiwala, Murtaza and Elmore, Megan and Feamster, Nick and Vempala, Santosh},
+ title = {Path splicing},
+ booktitle = {Proceedings of the ACM SIGCOMM 2008 conference on Data communication},
+ series = {SIGCOMM '08},
+ year = {2008},
+ isbn = {978-1-60558-175-0},
+ location = {Seattle, WA, USA},
+ pages = {27--38},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1402958.1402963},
+ doi = {http://doi.acm.org/10.1145/1402958.1402963},
+ acmid = {1402963},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {multi-path routing, path diversity, path splicing},
+}
+
+@inproceedings{tD2_LCRA07,
+ author = {Lakshminarayanan, Karthik and Caesar, Matthew and Rangan, Murali and Anderson, Tom and Shenker, Scott and Stoica, Ion},
+ title = {Achieving convergence-free routing using failure-carrying packets},
+ booktitle = {Proceedings of the 2007 conference on Applications, technologies, architectures, and protocols for computer communications},
+ series = {SIGCOMM '07},
+ year = {2007},
+ isbn = {978-1-59593-713-1},
+ location = {Kyoto, Japan},
+ pages = {241--252},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1282380.1282408},
+ doi = {http://doi.acm.org/10.1145/1282380.1282408},
+ acmid = {1282408},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {convergence, internet routing, protocols},
+}
+
+@book{tD2_Zieg07,
+ author = {Ziegelmann, Mark},
+ title = {Constrained Shortest Paths and Related Problems - Constrained Network Optimization},
+ year = {2007},
+ isbn = {3836446332, 9783836446334},
+ publisher = {VDM Verlag},
+ address = {Saarbr\&\#252;cken, Germany, Germany},
+}
+
+
+
 @article{tD2_SpMW02,
  author = {Spring, Neil and Mahajan, Ratul and Wetherall, David},
  title = {Measuring ISP topologies with rocketfuel},
